# danradocs

./: .buildinfo  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  about.html  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: changelog-check.yml  data_availability.yml  linting.yml  sphinx.yml  validate-zenodo-metadata.yml
_sources/: intro.md
_sources/docs/: data-details.md  modelspecs.md
_sources/notebooks/: distributions.ipynb  paper-figures.ipynb
catalog/: catalog.yaml
danra-book/: _config.yml  _toc.yml  about.md  intro.md  references.bib  requirements.txt
danra-book/docs/: annex.md  danra_hl_variables.md  danra_pl_variables.md  danra_sl_variables.md  data-availability.md  data-details.md  data-formats.md  description.md  documentation.md  introduction.md  modelspecs.md  parameters.md  references.md  summary.md
danra-book/notebooks/: distributions.ipynb  paper-figures.ipynb
danra-book/scripts/: parameter_list.py  utils.py
docs/: annex.html  data-availability.html  data-details.html  data-formats.html  description.html  documentation.html  introduction.html  modelspecs.html  parameters.html  references.html  summary.html
notebooks/: distributions.html  paper-figures.html
tests/: check_data_availability.py
tests/json/: zenodorecord.json
