[project]
name = "danra-book"
version = "0.1.0"
description = "A jupyter book for DANRA"
authors = [
    {name = "Kasper Hintz", email = "kah@dmi.dk"},
    {name = "Søren Borg Thorsen", email = "sbn@dmi.dk"}
]
dependencies = [
    "jupyter-book>=1.0.0",
    "xarray>=2024.5.0",
    "dask>=2024.5.2",
    "gcsfs>=2024.6.0",
    "intake-xarray>=2.0.0",
    "ghp-import>=2.1.0",
    "s3fs>=2025.9.0",
    "jinja2>=3.1.6",
    "zarr>=3.1.3",
    "matplotlib>=3.10.7",
    "loguru>=0.7.3",
    "scipy>=1.16.2",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
